--- a/express-server/package.json
+++ b/express-server/package.json
@@ -10,10 +10,9 @@
     "license": "MIT",
     "scripts": {
         "serve": "npm run build && node dist/server.js",
-        "build": "npm run build-ts && npm run lint",
+        "build": "tsc && npm run lint",
         "test": "jest --forceExit --coverage --verbose",
-        "build-ts": "tsc",
-        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix"
+        "lint": "eslint \"**/*.{js,ts}\""
     },
     "dependencies": {
         "dotenv": "^8.2.0",
