--- a/express-server/.eslintrc
+++ b/express-server/.eslintrc
@@ -7,8 +7,8 @@
   },
   "rules": {
     "semi": ["error", "always"],
-    "quotes": ["error", "double"],
-    "@typescript-eslint/explicit-function-return-type": "off",
+    "quotes": ["warn", "single"],
+    "@typescript-eslint/explicit-function-return-type": "warn",
     "@typescript-eslint/no-explicit-any": 1,
     "@typescript-eslint/ban-ts-ignore": 0,
     "@typescript-eslint/no-inferrable-types": [
