--- a/express-server/package.json
+++ b/express-server/package.json
@@ -19,6 +19,9 @@
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
         "express-validator": "^6.2.0",
+        "socket.io": "^2.3.0",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.3",
         "winston": "^3.2.1"
     },
     "devDependencies": {
@@ -30,6 +33,7 @@
         "@types/express": "^4.17.1",
         "@types/jest": "^24.0.18",
         "@types/node": "^12.7.8",
+        "@types/socket.io": "^2.1.4",
         "@types/supertest": "^2.0.8",
         "@types/winston": "^2.4.4",
         "@typescript-eslint/eslint-plugin": "^2.3.1",
@@ -39,8 +43,6 @@
         "eslint": "^6.4.0",
         "jest": "^24.9.0",
         "supertest": "^4.0.2",
-        "ts-jest": "^24.1.0",
-        "ts-node": "^8.4.1",
-        "typescript": "^3.6.3"
+        "ts-jest": "^24.1.0"
     }
 }
