--- a/react-client/package.json
+++ b/react-client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint src/**/*.{js,ts}"
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
     "bulma": "^0.8.0",
