--- a/react-client/package.json
+++ b/react-client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "socket.io-client": "^2.3.0",
     "ts-api-toolkit": "^1.0.0",
     "typescript": "3.6.4"
   },
@@ -23,7 +24,8 @@
     "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
-    "@types/react-router-dom": "^5.1.0"
+    "@types/react-router-dom": "^5.1.0",
+    "@types/socket.io-client": "^1.4.32"
   },
   "eslintConfig": {
     "extends": "react-app"
