--- a/express-server/docker-compose.yml
+++ b/express-server/docker-compose.yml
@@ -7,5 +7,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: "sappo_api"
       MONGO_INITDB_ROOT_PASSWORD: "admin"
+      MONGO_INITDB_DATABASE: "sappo"
     ports:
      - "27017:27017"
