--- a/react-client/package.json
+++ b/react-client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "typescript": "3.6.4"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.22",
     "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
@@ -29,6 +31,11 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!ts-api-toolkit).+\\.js$"
+    ]
   },
   "browserslist": [
     "last 1 chrome version",
