--- a/express-server/package.json
+++ b/express-server/package.json
@@ -19,6 +19,7 @@
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
         "express-validator": "^6.2.0",
+        "mongoose": "^5.7.8",
         "socket.io": "^2.3.0",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.3",
@@ -32,6 +33,7 @@
         "@types/eslint": "^6.1.1",
         "@types/express": "^4.17.1",
         "@types/jest": "^24.0.18",
+        "@types/mongoose": "^5.5.30",
         "@types/node": "^12.7.8",
         "@types/socket.io": "^2.1.4",
         "@types/supertest": "^2.0.8",
