--- a/express-server/package.json
+++ b/express-server/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "express-typescript-starter",
+    "name": "sappo-express-server",
     "version": "0.1.0",
-    "description": "A starting point for Node.js express apps with TypeScript",
+    "private": true,
     "scripts": {
         "serve:dev": "npm run build && node dist/server.js",
         "serve:prod": "npm run build && NODE_ENV=production node dist/server.js",
