--- a/react-client/package.json
+++ b/react-client/package.json
@@ -10,8 +10,8 @@
     },
     "dependencies": {
         "bulma": "^0.8.0",
-        "mobx": "^5.14.2",
-        "mobx-react": "^6.1.4",
+        "mobx": "^5.15.0",
+        "mobx-react-lite": "^1.5.1",
         "node-sass": "^4.13.0",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
